--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .board-logo {
-  width: 100px;
+  width: 128px;
   margin-bottom: 20px;
   margin-top: 20px;
 }
@@ -94,6 +94,10 @@
 }
 .link-row:hover {
   background: #f5f5f5;
+}
+
+.ticket-card {
+  margin-bottom: 10px;
 }
 
 .vertical-margin,
